# captcha

./: .gitignore  .travis.yml  CHANGES  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: docs.yml  pypi.yml  test.yml
captcha/: __init__.py  audio.py  image.py
docs/: api.rst  audio.rst  changelog.rst  conf.py  contribute.rst  image.rst  index.rst  requirements.txt
src/captcha/: __init__.py  audio.py  image.py
tests/: test_audio.py  test_image.py
