[project]
name = "captcha"
description = "A captcha library that generates audio and image CAPTCHAs."
authors = [{name = "Hsiaoming Yang", email="me@lepture.com"}]
dependencies = [
  "Pillow",
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dynamic = ["version"]
readme = "README.rst"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Security",
]

[project.urls]
Documentation = "https://captcha.lepture.com/"
Source = "https://github.com/lepture/captcha"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.setuptools.dynamic]
version = {attr = "captcha.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
captcha = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["captcha"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
  "@overload",
]

[tool.mypy]
strict = true
python_version = "3.8"
files = ["src/captcha"]
show_error_codes = true
pretty = true
